<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".googlemapapi.StopPointGoogleMap"
    android:orientation="vertical">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/margin_16dp"
        android:orientation="horizontal"
        android:elevation="10dp"
        android:background="@drawable/card_background"
        android:id="@+id/rlLayoutSearch"
        >

        <!--        search normal-->
        <!--        <ImageView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_centerVertical="true"-->
        <!--            android:paddingLeft="10dp"-->
        <!--            android:src="@drawable/ic_search"-->
        <!--            android:id="@+id/ic_search"/>-->


        <fragment android:id="@+id/autocomplete_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            />

        <!--        search normal-->
        <!--        <EditText-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginLeft="10dp"-->
        <!--            android:id="@+id/input_search"-->
        <!--            android:layout_toRightOf="@+id/ic_search"-->
        <!--            android:textSize="15dp"-->
        <!--            android:textColor="#000"-->
        <!--            android:layout_centerVertical="true"-->
        <!--            android:background="@null"-->
        <!--            android:hint="Enter address...."-->
        <!--            />-->

        <!--     suggestion
             <com.mancj.materialsearchbar.MaterialSearchBar
                 style="@style/MaterialSearchBarLight"
                 app:mt_speechMode="true"
                 app:mt_hint="Custom hint"
                 app:mt_maxSuggestionsCount="10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:outlineProvider="bounds"
                 android:id="@+id/searchBar" />-->


    </RelativeLayout>

    <ImageView
        android:contentDescription="@string/my_current_location"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/rlLayoutSearch"
        android:scaleType="centerCrop"
        android:id="@+id/my_location"
        android:src="@drawable/marker_cute"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin_16dp"
        android:padding="3dp"
        android:background="@drawable/card_background"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/suggestion_layout"
        android:background="@drawable/card_background"
        android:layout_margin="@dimen/margin_16dp"
        android:padding="@dimen/margin_16dp"
        android:elevation="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Near by"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="8dp">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/hotel_icon"
                android:id="@+id/hotel"
                android:contentDescription="@string/hotel"
                android:onClick="onClick"
                android:layout_margin="8dp"
                />
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/restaurant_icon"
                android:id="@+id/restaurant"
                android:onClick="onClick"
                android:contentDescription="@string/restaurant"
                android:padding="2dp"
                android:layout_margin="8dp"
                />
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/rest_station_icon"
                android:id="@+id/rest_station"
                android:onClick="onClick"
                android:contentDescription="@string/rest_station"
                android:padding="2dp"
                android:layout_margin="8dp"
                />
            <ImageView
                android:id="@+id/other"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/other_places"
                android:onClick="onClick"
                android:src="@drawable/other_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/complete_add_stop_point_1"
                style="@style/AppTheme.Button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="STOP POINTS" />

            <Button
                android:id="@+id/complete_add_stop_point"
                style="@style/AppTheme.Button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="COMPLETE"
                android:layout_marginStart="8dp"/>
        </LinearLayout>


    </LinearLayout>




</RelativeLayout>